// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DataTableCell should be rendered correctly 1`] = `
<div
  className="flexCell cell size-36 padding-12"
  onClick={[Function]}
  style={
    Object {
      "alignSelf": undefined,
      "flexBasis": "200px",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "minWidth": 0,
      "textAlign": undefined,
    }
  }
>
  <div>
    test
  </div>
</div>
`;

exports[`DataTableCell should be rendered correctly with extra props 1`] = `
<div
  className="flexCell cell size-48 padding-24 padding-right-24"
  onClick={[Function]}
  style={
    Object {
      "alignSelf": undefined,
      "flexBasis": "200px",
      "flexGrow": undefined,
      "flexShrink": undefined,
      "minWidth": 0,
      "textAlign": undefined,
    }
  }
>
  <div>
    test
  </div>
</div>
`;
